  best four-probe combination, finding 14% more Internet hosts than
  the previous default, -PE -PA80. The default for nonroot users is
  -PS80,443, replacing the previous default of -PS80. In addition,
  ping probes are now sent in order of effectiveness (-PE first) so
  that less likely probes may not have to be sent. [David/Fyodor]

o [Zenmap] Fixed a crash, introduced in 4.85BETA4, that happened when
  searching scan results by date. [David] The error message was
      File "zenmapGUI\SearchGUI.pyo", line 816, in set_date
    TypeError: argument must be sequence of length 9, not 3

o Patched configure.ac to detect Lua include and library files in
  "lua5.1" subdirectories of /usr/include and the like. Apparently
  Debian puts them there. We still check the likes of
  /usr/include/lua.h and /usr/include/lua/lua.h as well. [Jan
  Christoph Nordholz]

o Fixed an assertion failure which could occur on at least SPARC Linux
  The error looked like "nsock_core.c:294: handle_connect_result:
  Assertion `0' failed. Aborted". [David Fifield, Fabio Pedretti]

o Improved the Oracle DB version detection signatures. [Tom Sellers]

o Updated nmap-mac-prefixes with the latest MAC address prefix data
  from http://standards.ieee.org/regauth/oui/oui.txt as of
  5/20/09. [Fyodor]

Nmap 4.85BETA9 [2009-05-12]

o Integrated all of your 1,156 of your OS detection submissions and
  your 50 corrections since January 8.  Please keep them coming!  The
  second generation OS detection DB has grown 14% to more than 2,000
  fingerprints!  That is more than we ever had with the first system.
  The 243 new fingerprints include Microsoft Windows 7 beta, Linux
  2.6.28, and much more.  See
  http://seclists.org/nmap-dev/2009/q2/0335.html. [David]

o [Ncat] A whole lot of work was done by David to improve SSL
  security and functionality:
  o Ncat now does certificate domain and trust validation against
    trusted certificate lists if you specify --ssl-verify.